--- a/src/components/resetpassword.css
+++ b/src/components/resetpassword.css
@@ -1,11 +1,18 @@
 * {
   box-sizing: border-box;
 }
+html ,
+body{
+  width: 100%;
+  height: 100vh;
+}
 .resetpassword .login_main {
   margin-top: 20px;
   padding-left: 5%;
 }
-
+.resetpassword{
+  min-height: 100vh;
+}
 .resetpassword .login_logo {
   width: 186px;
   height: 37px; 
