--- a/src/components/forgot_password.css
+++ b/src/components/forgot_password.css
@@ -54,9 +54,13 @@
  }  
  .forgotpassword input:focus{
   /* border-image:linear-gradient(94.64deg, #ED1C24 0%, #FAA61A 100%); */
-    outline:2px solid orange;
-   border: none;
-   box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18);
+  background: 
+  linear-gradient(white,white) padding-box, /*this is your grey background*/
+  linear-gradient(to right, #ED1C24, #FAA61A) border-box;
+ color: #313149;
+ padding:10px;
+ border: 2px solid transparent;
+ box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18); 
  }
   
  .forgotpassword .form_label{
@@ -76,6 +80,7 @@ line-height: 15px;
 
 
 .forgotpassword .input_box{
+outline: none;
 width: 480px;
 height: 50px;
 left: 730px;
