--- a/src/components/resetpassword.css
+++ b/src/components/resetpassword.css
@@ -11,7 +11,7 @@ body{
   padding-left: 5%;
 }
 .resetpassword{
-  min-height: 100vh;
+  min-height: 73vh;
 }
 .resetpassword .login_logo {
   width: 186px;
@@ -46,9 +46,13 @@ body{
 }
 .resetpassword input:focus {
   /* border-image:linear-gradient(94.64deg, #ED1C24 0%, #FAA61A 100%); */
-  outline: 2px solid orange;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18);
+  background: 
+  linear-gradient(white,white) padding-box, /*this is your grey background*/
+  linear-gradient(to right, #ED1C24, #FAA61A) border-box;
+ color: #313149;
+ padding:10px;
+ border: 2px solid transparent;
+ box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18); 
 }
 
 .resetpassword .form_label {
@@ -66,6 +70,7 @@ body{
 }
 
 .resetpassword .input_box {
+  outline: none;
   width: 480px;
   height: 50px;
   left: 730px;
@@ -79,6 +84,7 @@ body{
     line-height: 17px;
 }
 .resetpassword .input_box2 {
+  outline: none;
   width: 480px;
   height: 50px;
   left: 730px;
@@ -458,10 +464,9 @@ color: #A7A9AC;
   background-size: 342px 458px;
   z-index: -1;
 }
-@media screen and (max-width: 1920px) and (min-width: 1660px){
+/* @media screen and (max-width: 1920px) and (min-width: 1660px){
 
 .resetpassword .login_banner_img{
-  /* background: #FFFDF9; */
   margin:auto;
   display: block; 
   text-align: center;
@@ -493,10 +498,9 @@ color: #A7A9AC;
   margin-left: -16%;
 }
 
-}
+} */
 
-@media screen and (max-width: 1556px)  and (min-width: 1440px){
-
+/* @media screen and (max-width: 1556px)  and (min-width: 1440px){
 .resetpassword .login_banner_img{
   margin: auto;
   display: block;
@@ -526,7 +530,7 @@ color: #A7A9AC;
   margin-top: 114%;
 }
 
-}
+} */
 
 
 /* @media screen and (max-width: 1199px) and (min-width: 992px) {
