--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -109,14 +109,23 @@ input[type="text"] {
   margin-bottom: 20px;
 }
 .signup input:focus {
-  outline: 2px solid orange;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18);
+  background: 
+  linear-gradient(white,white) padding-box, /*this is your grey background*/
+  linear-gradient(to right, #ED1C24, #FAA61A) border-box;
+ color: #313149;
+ padding:10px;
+ border: 2px solid transparent;
+ box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18); 
 }
 
 .signup .react-tel-input input:focus {
-  outline: 2px solid orange;
-  border: none;
+  background: 
+  linear-gradient(white,white) padding-box, /*this is your grey background*/
+  linear-gradient(to right, #ED1C24, #FAA61A) border-box;
+ color: #313149;
+ padding:10px;
+ border: 2px solid transparent;
+ box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18); 
 }
 
 
@@ -135,6 +144,7 @@ input[type="text"] {
 }
 
 .signup .input_box {
+  outline: none;
   width: 480px;
   height: 50px;
   left: 730px;
@@ -148,6 +158,7 @@ input[type="text"] {
     line-height: 17px;
 }
 .signup .input_box2 {
+  outline: none;
   width: 480px;
   height: 50px;
   left: 730px;
@@ -748,7 +759,7 @@ input:focus + label {
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; */
 
- background: -webkit-linear-gradient(45deg #ED1C24, #FAA61A);
+ background: -webkit-linear-gradient(94.64deg, #ed1c24 0%, #faa61a 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
 
