--- a/src/components/forgot_password.css
+++ b/src/components/forgot_password.css
@@ -1,5 +1,17 @@
-*{
-    box-sizing: border-box ;
+* {
+  box-sizing: border-box;
+}
+html ,
+body{
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  /* overflow: hidden; */
+    /* overflow: auto; */
+
+}
+.forgotpassword{
+  min-height: 73vh;
 }
 .forgotpassword .login_main{
   margin-top: 20px;
@@ -174,10 +186,9 @@ color: #FFFFFF;
     background-size: 342px 458px;
     z-index: -1;
   }
-@media screen and (max-width: 1920px) and (min-width: 1660px){
+/* @media screen and (max-width: 1920px) and (min-width: 1660px){
 
   .forgotpassword .login_banner_img{
-    /* background: #FFFDF9; */
     margin:auto;
     display: block; 
     text-align: center;
@@ -235,4 +246,4 @@ color: #FFFFFF;
     margin-top: 135px;
 }
   
-}
+} */
