--- a/src/components/forgotmsg.css
+++ b/src/components/forgotmsg.css
@@ -1,8 +1,20 @@
-*{
-    box-sizing: border-box ;
+* {
+  box-sizing: border-box;
 }
-.forgotmsg {
-    margin-top: 12%;
+html ,
+body{
+  width: 100%;
+  height: 80vh;
+  margin: auto;
+  /* overflow: hidden; */
+    /* overflow: auto; */
+
+}
+.forgotmsg{
+  min-height: 63vh;
+}
+.forgotmsg .forgot-padding{
+    margin-top: 13%;
 }
 
 .forgotmsg .login_main{
@@ -79,10 +91,9 @@
     background-size: 342px 458px;
     z-index: -1;
   }
-@media screen and (max-width: 1920px) and (min-width: 1660px){
+/* @media screen and (max-width: 1920px) and (min-width: 1660px){
 
   .forgotmsg .login_banner_img{
-    /* background: #FFFDF9; */
     margin:auto;
     display: block; 
     text-align: center;
@@ -134,4 +145,4 @@
     z-index: -1;
   }
   
-}
+} */
