--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,6 +1,20 @@
 
 *{
     box-sizing: border-box ;
+    font-family: Montserrat;
+font-style: normal;
+}
+html ,
+body{
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  /* overflow: hidden; */
+    /* overflow: auto; */
+
+}
+.login{
+  min-height: 82vh;
 }
 .login .login_main{
   margin-top: 20px;
@@ -173,7 +187,7 @@ line-height: 17px;
 }
 
 .login  .Icontoggle {
-  margin-left: 385px;;
+  margin-left: 369px;;
   position: absolute;
   transform: translate(-25% , -236%);
 }
@@ -275,7 +289,8 @@ color: #000000;
     display: inline-block;
     width: 1.6em;
     height: 1.6em;
-    padding-left: 0.2em;
+    line-height: 18px;
+    padding-left: 5px;
     padding-bottom: 0.3em;
     margin-right: 0.2em;
     vertical-align: bottom;
@@ -429,7 +444,7 @@ margin-left: 38px;
 color: #A7A9AC;
 }
  
-@media screen and (max-width: 1920px) and (min-width: 1660px){
+@media screen  and (min-width: 1660px){
 
   .login .login_banner_img{
     /* background: #FFFDF9; */
@@ -458,16 +473,17 @@ color: #A7A9AC;
   
 }
 
-@media screen and (max-width: 1556px)  and (min-width: 1440px){
+@media screen and (max-width: 1659px)  and (min-width: 1440px){
 
   .login .login_banner_img{
     margin: auto;
     display: block;
     text-align: center;
     position: static;
-    width: 114%;
+    width: 127%;
     height: 100%;
-    margin-left: -7%;
+    /* margin-left: -7%; */
+    margin-left: -33%;
     padding-top: 185px;
   }
   .login .banner-img::after {
@@ -480,7 +496,7 @@ color: #A7A9AC;
     height: 100%;
    
     background: url('./images/Vector.png') no-repeat;
-    background-size: 382px 516px;
+    background-size: 428px 611px;
     z-index: -1;
   }
   
