--- a/src/components/resetpassword.css
+++ b/src/components/resetpassword.css
@@ -5,14 +5,19 @@ html ,
 body{
   width: 100%;
   height: 100vh;
+  margin: auto;
+  /* overflow: hidden; */
+    /* overflow: auto; */
+
+}
+.resetpassword{
+  min-height: 73vh;
 }
 .resetpassword .login_main {
   margin-top: 20px;
   padding-left: 5%;
 }
-.resetpassword{
-  min-height: 73vh;
-}
+
 .resetpassword .login_logo {
   width: 186px;
   height: 37px; 
