--- a/src/components/login.css
+++ b/src/components/login.css
@@ -423,7 +423,7 @@ color: #FFFFFF;
     
     color: #A7A9AC !important;
   }
-.login .footer_logo{
+ .footer_logo{
   position: absolute;
 width: 112.99px;
 height: 22px;
