--- a/src/components/resetpassword.css
+++ b/src/components/resetpassword.css
@@ -15,7 +15,7 @@ body{
 }
 .resetpassword .login_main {
   margin-top: 20px;
-  padding-left: 5%;
+  /* padding-left: 5%; */
 }
 
 .resetpassword .login_logo {
