--- a/src/components/forgot_password.css
+++ b/src/components/forgot_password.css
@@ -21,7 +21,7 @@ body{
   width: 186px;
   height: 37px; 
   margin-bottom: 34px;
-  margin-top: 161px;   
+  margin-top: 71px;   
 
 }
  
@@ -182,10 +182,19 @@ color: #FFFFFF;
     width: 45.33%;
     height: 100%;
    
-    background: url('./images/Vector.png') no-repeat;
-    background-size: 342px 458px;
+    background: url('./images/forgot.png') no-repeat;
+    background-size: 540px 665px;
     z-index: -1;
   }
+  @media screen and (min-width:1280px){
+ .forgotpassword .login_main{
+      position: relative;
+  top: 50%;
+  -webkit-transform: translateY(30%);
+  -ms-transform: translateY(30%);
+  transform: translateY(30%);
+  }
+}
 /* @media screen and (max-width: 1920px) and (min-width: 1660px){
 
   .forgotpassword .login_banner_img{
