--- a/src/components/resetpassword.css
+++ b/src/components/resetpassword.css
@@ -14,14 +14,15 @@ body{
   min-height: 73vh;
 }
 .resetpassword .login_main {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   /* padding-left: 5%; */
+  
 }
 
 .resetpassword .login_logo {
   width: 186px;
   height: 37px; 
-  margin-top: 48%;
+  margin-top: 65%;
 }
 
 .resetpassword .welcom_text {
@@ -463,12 +464,22 @@ color: #A7A9AC;
   top: 0;
   bottom: 0;
   width: 45.33%;
-  height: 100%;
- 
-  background: url('./images/Vector.png') no-repeat;
-  background-size: 342px 458px;
+  height: 100%; 
+  background: url('./images/forgot.png') no-repeat;
+  background-size: 540px 663px;
   z-index: -1;
 }
+
+@media screen and (min-width:1367px){
+  .resetpassword .login_main{
+       position: relative;
+   top: 50%;
+   -webkit-transform: translateY(30%);
+   -ms-transform: translateY(30%);
+   transform: translateY(15%);
+   }
+ }
+
 /* @media screen and (max-width: 1920px) and (min-width: 1660px){
 
 .resetpassword .login_banner_img{
