--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -143,7 +143,7 @@ input[type="text"] {
   margin-bottom: 10px;
   font-family: Montserrat;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 12px;
   line-height: 15px;
 }
@@ -652,7 +652,7 @@ position: absolute;
 width: 304px;
 height: 30px;
 left: 170px;
-top: 873px;
+top: 897px;
 font-family: Montserrat;
 font-style: normal;
 font-weight: 500;
@@ -785,10 +785,13 @@ height: 353px;
   flex-direction: column-reverse;
   color:#A7A9AC;
 }
+.react-tel-input:focus +.special-label{
+  background: -webkit-linear-gradient(90deg, #ed1c24 0%, #faa61a 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 input:focus + label {
-
-
  background: -webkit-linear-gradient(90deg, #ed1c24 0%, #faa61a 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
