--- a/src/components/login.css
+++ b/src/components/login.css
@@ -140,7 +140,7 @@ text-decoration: none;
  }  
  .login input:focus {
   background: 
-  linear-gradient(white,white) padding-box, /*this is your grey background*/
+  linear-gradient(white,white) padding-box, 
   linear-gradient(to right, #ED1C24, #FAA61A) border-box;
  color: #313149;
  padding:10px;
@@ -167,7 +167,7 @@ font-style: normal;
 font-weight: 500;
 font-size: 12px;
 line-height: 15px;
-
+color: #A7A9AC;
 } 
 
 
